# CarsharingApplication

./: README.md  pyproject.toml  requirements.txt  reset_onboarding.py
.github/workflows/: release-msi.yml
roadmaps/: implementation_plan.txt  new_features.txt
scripts/: build_installer.ps1  build_msi.py
src/: main.py  rideshare.db  rideshare_app.py
src/config/: settings.json
src/resources/: style.qss
src/utils/: onboarding.py  pdf_exporter.py
tests/: test_analytics_dashboard.py  test_google_maps_recovery.py  test_history_snapshot.py  test_main.py  test_onboarding.py  test_responsive_layouts.py  test_validation_feedback.py
